--- a/frontend/assets/styles/user-reg.css
+++ b/frontend/assets/styles/user-reg.css
@@ -10,33 +10,69 @@ body {
 }
 
 .container-fluid {
-  background: url("../images/reg-bg-img.jpg") no-repeat center center/cover;
-  opacity: 1;
+  background: url("../images/login-signup-image.jpg") no-repeat center center/cover;
+  opacity: 0.9;
 }
 
 .header {
-  padding-bottom: 20px;
   font-size: xx-large;
+  color: #fdb560;
+  text-shadow: 2px 2px 4px #000000;
+  font-style: "Poppins", sans-serif;
 }
 
 .form-title {
+  padding-top: 10px;
   display: flex;
   justify-content: center;
-  color: #c59d5f;
+  color: #000000;
+  font-style: italic;
+  font-weight: bolder;
 }
 
 .form-style {
-  padding-top: 10px;
   display: flex;
-  border-radius: 10px;
+  border-radius: 50px;
   justify-content: center;
-  margin: auto;
-  background-color: rgba(0, 0, 0, 0.7);
+  background-color: rgba(0, 0, 0, 1);
   width: 500%;
+  max-height: 100%;
 }
 
-.input-group {
-  border-radius: 5px;
+.form-style input,
+.form-style input-group-append {
+  background-color: rgba(0, 0, 0, 0.3);
+  color: white;
+  border: 2px solid rgba(255, 255, 255, 0.6);
+  border-radius: 10px;
+  padding: 8px;
+}
+
+.input-group .form-control {
+  border-radius: 5px !important;
+}
+
+.input-group-append .input-group-text {
+  border-top-right-radius: 5px !important;
+  border-bottom-right-radius: 5px !important;
+}
+
+#password,
+#confirmPassword {
+  border-top-right-radius: 0 !important;
+  border-bottom-right-radius: 0 !important;
+}
+.input-group-append .input-group-text {
+  background-color: rgba(0, 0, 0, 0.3);
+  color: black;
+  border: 2px solid rgba(255, 255, 255, 0.6);
+  border-top-right-radius: 5px !important;
+  border-bottom-right-radius: 5px !important;
+}
+
+.input-group-append .input-group-text .text-dark {
+  padding: 0;
+  color: white !important;
 }
 
 .form-group {
@@ -83,67 +119,122 @@ button {
 }
 
 .custom-btn:hover {
-  background-color: #fdb560  !important;
+  background-color: #fdb560 !important;
   color: black;
 }
 
 p a:hover {
   color: #c59d5f;
   transition: background-color 0.3s, color 0.3s;
-
 }
 
 .invalid-feedback {
   font-size: medium;
   font-weight: 500;
   font-family: "Lato", sans-serif !important;
-  padding-bottom: 0 !important;
+  padding-bottom: 0;
+  margin: 0;
 }
 
 /* Responsive behavior */
 
 @media (min-width: 560px) {
   body {
-    padding: 20px;
     overflow: hidden;
     height: 100vh;
   }
 
   .header {
-    padding-bottom: 50px;
+    padding: 30px;
   }
-  .container-fluid {
-    border-radius: 10px;
+  .form-style {
     padding-bottom: 20px;
+    background-color: rgb(99, 97, 97, 0.3);
+    padding-top: 10;
+  }
+
+  .container-fluid {
     height: 100%;
+    box-shadow: inset(3px);
+    padding-top: 30px;
+  }
+
+  .form-border {
+    padding-bottom: 20px;
+    margin: auto;
+    border-radius: 10px;
+    border-style: solid;
+    border-color: white;
+  }
+
+  .form-border::before {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    backdrop-filter: blur(7px);
+    z-index: -1;
+    border-radius: inherit;
   }
 }
 
 @media (max-width: 560px) {
-  .form-group {
-    flex-direction: column;
-    text-align: left !important;
+  body {
+    overflow: auto;
+  }
+
+  .container-fluid {
+    width: 100%;
+    height: 100vh;
+    overflow: auto;
+    padding-bottom: 40px;
+   
+    
+  }
+  .header {
+    text-align: center;
+    padding-bottom: 20px;
+    font-size: 25px;
+    padding-top: 20px;
+  }
+  .form-style {
+    padding-bottom: 20px;
+    background-color: rgb(99, 97, 97, 0.3);
+    padding-top: 5px;
+  }
+  .form-style::before {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background: inherit;
+    backdrop-filter: blur(7px);
+    z-index: -1;
+    border-radius: inherit;
   }
 
   .form-group label {
-    align-self: flex-start;
-    padding-left: 0;
-    color: white;
-    font-size: 18px;
-  }
-
-  .input-group {
-    display: flex;
-    align-items: left;
-    align-self: flex-start;
-    padding-left: 0;
-    justify-content: center;
-    width: 100;
+    margin-left: 1px !important;
+    width: 100% !important;
+    font-weight: 400 !important;
   }
 
   .invalid-feedback {
     padding-bottom: 2px !important;
   }
+
+  .row {
+    margin-bottom: 0;
+  }
+
+  .cus-button {
+    margin-top: 20px;
+  }
+
 }
 
 @media (min-width: 768px) and (max-width: 922px) {
@@ -154,16 +245,6 @@ p a:hover {
 
 @media (min-width: 1440px) {
   .reg-form-section {
-    padding-top: 20px !important;
-  }
-}
-
-@media (max-width: 768px) {
-  .logo_icon {
-    margin-top: 10px !important;
-  }
-
-  .text-style {
     padding-top: 20px !important;
   }
 }
